# eagletrt-recruiting-sw-master-telemetry-project_2

./: CMakeLists.txt  README.md  can_fsm  main.cpp  telemetry
generatedFiles/: statistics.csv
include/: fsm.h  message.h  receiver.h
src/: fsm.cpp  message.cpp  receiver.cpp
